traffic-management-demo/ingress-demo/ingress-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-ingress
  namespace: demo
spec:
  hosts:
    - "*"
  gateways:
    - demo-ingress
  http:
    - route:
        - destination:
            host: demo-app.demo.svc.cluster.local
            subset: v1
          weight: 100
#        - destination:
#            host: demo-app.demo.svc.cluster.local
#            subset: v2
#          weight: 0
